added the sprint 4 controller
